[gd_scene load_steps=2 format=3 uid="uid://cbbvl6mhuosf4"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_h6kus"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_h6kus")

[node name="Health" type="Node" parent="."]

[node name="HealthLabel" type="Label" parent="Health"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_top = 32.0
offset_right = -38.0
offset_bottom = 55.0
grow_horizontal = 0

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.59
anchor_right = 0.501
anchor_bottom = 0.59
offset_left = -32.15
offset_top = -15.5
offset_right = 31.85
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Begin"

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.525
anchor_right = 0.501
anchor_bottom = 0.525
offset_left = -56.15
offset_top = -13.25
offset_right = 58.85
offset_bottom = 12.75
grow_horizontal = 2
grow_vertical = 2
text = "Are you ready?"

[node name="SpritePicker" type="Node" parent="."]

[node name="SpriteToggle" type="CheckButton" parent="SpritePicker"]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.4
anchor_right = 0.501
anchor_bottom = 0.4
offset_left = -24.15
offset_top = -12.0
offset_right = 22.85
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChooseYourSprite" type="Label" parent="SpritePicker"]
offset_left = 504.0
offset_top = 216.0
offset_right = 652.0
offset_bottom = 242.0
size_flags_vertical = 1
text = "Choose Your Sprite"

[node name="StockLabel" type="Label" parent="SpritePicker"]
offset_left = 488.0
offset_top = 248.0
offset_right = 536.0
offset_bottom = 274.0
text = "Stock
"

[node name="RobotLabel" type="Label" parent="SpritePicker"]
offset_left = 616.0
offset_top = 248.0
offset_right = 663.0
offset_bottom = 274.0
text = "Robot"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SpritePicker/SpriteToggle" to="." method="_on_sprite_toggle_pressed"]
